CHANGELOG
--------------------------

ClanSphere 2009.0 RC2 >> 2009-04-05
___________________________________________________________

-> Added caching functions and implemented caching in access module and metatags (duriel, hajo)
-> Improved handling of filetypeicons (gahero)
-> Hiding squads in fightus will also hide them in wars now (gahero)
-> Fixed alot of path settings in themes to be compatible with mod_rewrite (gahero, hajo)
-> Fixed many bugs in the logs mod and added php errors to error log files (hajo)
-> Reworked sec_news to only scan for news every 2,5 hours and be displayed everywhere (hajo)
-> Hiding tables in squads view when there are no awards, ranks or wars (fay-pain)

-- Fixed a huge number of bugs and a few wishes that were reported at "Trac" --


ClanSphere 2009.0 RC1 >> 2009-03-25
___________________________________________________________

-> Now using themes everywhere (whole team, mainly fay-pain)
-> Added and reworked medals module to ClanSphere (mc.alcatraz, duriel)
-> Added function create_user to create every user in the same way (denni)
-> Now all modules use the cs_user function to make global changes of the user nick display easy
-> Fixed users_remove without loose database integrity (mc.alcatraz)
-> Completely reworked AJAX solution (duriel, schiri)
-> Added some navlists and themes (fay-pain, duriel)
-> Added rank feature to boardmods module (fay-pain)
-> Added security function for server variables to avoid get or post injections in the future (duriel)
-> Added comment functions to create/edit/remove comments in the same way (fay-pain)
-> Added optional feature that allows guests to create comments in all modules (fay-pain)
-> Added search navlist and articles search as default now (fay-pain)
-> Added default user pictures (duriel)
-> Added global cellspacing variable (duriel)
-> Added pictures mod that allows implementing pictures to all mods easily (duriel)