@@ -5,6 +5,7 @@ ClanSphere 2009.0 RC2 >> 2009-04-05
 ___________________________________________________________
 
 -> Added caching functions and implemented caching in access module and metatags (duriel, hajo)
+-> Added possibilities to close or pinup threads during writing, close also for create commentes (fay-pain)
 -> Improved handling of filetypeicons (gahero)
 -> Hiding squads in fightus will also hide them in wars now (gahero)
 -> Fixed alot of path settings in themes to be compatible with mod_rewrite (gahero, hajo)
